Fix headers for other pages; fix spacings

--- a/src/scss/layout/components/_splash.scss
+++ b/src/scss/layout/components/_splash.scss
@@ -21,13 +21,15 @@
         height: 50%;
         margin: auto;
         position: absolute;
-        top: 25px; left: 0; bottom: 0; right: 0;
+        top: 150px; left: 0; bottom: 0; right: 0;
         text-align: center;
         text-transform: uppercase;
 
         @include respond-to( tablet ){
             width: 50%;
             height: 50%;
+
+            top: 25px;
         }
 
         .splash-head {
